examples/fail/listings-indented.org

* Test

A listing

#+BEGIN_SRC sh
echo test
#+END_SRC
S

A listing with indented code

#+BEGIN_SRC sh
  echo test
#+END_SRC
S

A listing with attributes and indented code
#+BEGIN_SRC sh :results output :exports both
   echo test
#+END_SRC
